--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,20 @@
     tools:context=".MainActivity">
 
     <Button
+        android:id="@+id/open_map"
+        style="@style/style1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/play_rounded_button"
+        android:text="open locations in map"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.476"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/show_location"
+        app:layout_constraintVertical_bias="0.229" />
+
+    <Button
         android:id="@+id/start_location"
         style="@style/style1"
         android:layout_width="wrap_content"
@@ -19,15 +33,15 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <VideoView
+        android:id="@+id/walker"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStarjohnywalkertOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/start_location"
-        app:srcCompat="@mipmap/ic_launcher_round" />
+        app:srcCompat="@raw/johnywalker" />
 
     <Button
         android:id="@+id/stop"
@@ -39,7 +53,7 @@
         android:text="STOP"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/image" />
+        app:layout_constraintTop_toBottomOf="@+id/walker" />
 
     <TextView
         android:id="@+id/show_location"
@@ -55,15 +69,6 @@
         app:layout_constraintTop_toBottomOf="@+id/stop" />
 
 
-    <com.google.android.gms.maps.MapView
-        android:id="@+id/mymap"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginTop="16dp"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/show_location" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
