--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,30 +25,31 @@
         style="@style/style1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:text="START"
+        android:layout_marginTop="32dp"
         android:background="@drawable/play_rounded_button"
+        android:text="START"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <VideoView
+    <ImageView
         android:id="@+id/walker"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/stop"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStarjohnywalkertOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/start_location"
-        app:srcCompat="@raw/johnywalker" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/start_location" />
 
     <Button
         android:id="@+id/stop"
         style="@style/style1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="32dp"
         android:background="@drawable/play_rounded_button"
         android:text="STOP"
         app:layout_constraintEnd_toEndOf="parent"
@@ -68,7 +69,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/stop" />
 
-
+    <TextView
+        android:id="@+id/keep_walking"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/style2"
+        android:text="Johny Walker keep walking, when tired just press stop to get your new location "
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="125dp"
+        app:layout_constraintTop_toBottomOf="@+id/walker"
+        app:layout_constraintBottom_toTopOf="@id/stop"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
